@@ -64,7 +64,7 @@ static inline void waitCall(double milisec, double sec){
     req.tv_nsec = milisec * 1000000L;
     nanosleep(&req, (struct timespec *)NULL);
   }
-};
+}
 
 static inline void waitSleep(ticks TICKS2WAIT){
     /*!!!----Mehdi--required to change busy wait with nanosleep ----!!*/ 
@@ -78,7 +78,7 @@ static inline void waitSleep(ticks TICKS2WAIT){
      */ 
     struct timespec req = {0, static_cast<long>(TICKS2WAIT)};
     nanosleep(&req, NULL);
-};
+}
 #endif /* __linux__ */
 
 /* NOTE:  nticks should be something less than 1000000 otherwise 
